--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     margin: 0 10px 0 10px;
     padding: 0 10px 0 10px;
-    background: rgba(128, 128, 128, 0.377);
+    /* background: rgba(128, 128, 128, 0.377); */
 }
 
 /* navbar */
@@ -103,11 +103,11 @@ nav {
     align-items: center;
     padding: 10px 0 10px 0;
     width: 85%;
+    margin: auto;
     gap: 10px;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.30);
 }
-
 .bfield_1st {
     /* width: 175px; */
     width: 20%;
@@ -183,7 +183,6 @@ nav {
     height: 15px;
     flex-shrink: 0;
 }
-
 
 .bfield_4th {
     width: 20%;
@@ -329,6 +328,15 @@ nav {
     margin: 10px 0 10px 0;
     padding: 10px 0 10px 0;
 }
+.p10 {
+    padding: 10px;
+    background: rgba(233, 68, 68, 0.05);
+    margin: 10px;
+}
+.m10 {
+    margin: 10px;
+    background: rgba(41, 206, 246, 0.05);
+}
 .sec_3_p1 {
     text-align: center;
     
@@ -352,11 +360,12 @@ nav {
     font-weight: 400;
     line-height: 26px; 
 }
+
 .sec_3_p2 {
     display: flex;
     border-radius: 16px;
     border: 1px solid rgba(41, 206, 246, 0.20);
-    background: rgba(41, 206, 246, 0.05);
+    /* background: rgba(41, 206, 246, 0.05); */
 }
 .sec_3_p2 img{
     width: 64px;
@@ -384,13 +393,15 @@ nav {
 
 .sec_3_p3 {
     text-align: start;
-
+    padding-left: 5px;
     width: 580px;
     height: 200px;
     flex-shrink: 0;
     border-radius: 16px;
     border: 1px solid rgba(233, 68, 68, 0.20);
     background: rgba(233, 68, 68, 0.05);
+    align-items: center;
+    margin: auto;
 }
 .sec_3_p3 img{
     width: 64px;
@@ -427,7 +438,7 @@ nav {
 .sec_last_p1 {
     margin: 5px;
     padding: 5px;
-    width: 52%;
+    width: 50%;
     height: 500px;
     background: #FFF;
     display: grid;
@@ -440,17 +451,23 @@ nav {
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+    margin-bottom: 0;
+    padding-bottom: ;
 }
 .sec_last_p1 p {
-    width: 350px;
+    margin-top: 0;
+    padding-top: 0;
+    width: 340px;
     color: #5A5A5D;
     font-family: Mulish;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 26px; 
+    line-height: 25px; 
 }
 .sec_last_p1 hr {
+    margin-top: 0;
+    padding-top: 0;
     width: 80%;
     height: 1px;
     background: rgba(19, 19, 24, 0.10);
@@ -458,11 +475,63 @@ nav {
 .sec_last_p1 hr:hover {
     background: blue;
 }
+.sec_last_p1 input {
+    width: 95%;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+
+    color: rgba(19, 19, 24, 0.30);
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 .sec_last_p1 input, button {
+    gap: none;
+    border: none;
+    margin-top: 0;
     
-    margin: 5px;
-    /* display: grid;
-    grid-template-columns: 1fr; */
+}
+.sec_last_p1 button {
+    width: 95%;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal; 
+}
+
+.sec_last_p2 {
+    width: 48%;
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background-image: url('./images/Rectangle\ 8\ \(1\).png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.sec_last_p2 div {
+    width: 220px;
+    height: 90px;
+    transform: rotate(-19.628deg);
+    
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #FF5400;
+    text-align: center;
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
 }
 
 
