--- a/style.css
+++ b/style.css
@@ -67,17 +67,17 @@ nav {
 .banner {
     text-align: center;
     width: 100%;
-    height: 550px;
+    height: 480px;
     flex-shrink: 0;
     border-radius: 16px;
     background-image: url("./images/Group\ 13\ \(1\)\ \(1\).png");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     /* background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%); */
 }
 .banner h2 {
     margin: 10px 0 0 0;
-    padding: 20px 0 0 0;
+    padding: 40px 0 0 0;
     color: #FFF;
     font-family: Mulish;
     font-size: 3.5rem;
@@ -604,4 +604,48 @@ nav {
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+}
+
+/* Responsive for 600px devices */
+
+@media screen and (max-width:600px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        
+    }
+    .banner{
+        /* height: auto;
+        margin-top: 0; */
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        width: 100%;
+        height: 500px;
+        flex-shrink: 0;
+        border-radius: 16px;
+        /* background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%); */
+    }
+
+    .banner_field {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .bfield_1st{
+        width: 90%;
+    }
+    .bfield_2nd{
+        width: 90%;
+    }
+    .bfield_3rd{
+        width: 90%;
+    }
+    .bfield_4th{
+        width: 90%;
+    }
 }
