--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: rgba(19, 19, 24, 0.05);
 }
 
 .left {
@@ -291,7 +295,6 @@ nav {
 .sec_2 h2{
     color: #131318;
     margin-left: 0;
-    /* text-align: center; */
     font-family: Mulish;
     font-size: 35px;
     font-style: normal;
@@ -616,6 +619,10 @@ nav {
         text-align: center;
         
     }
+    .right ul{
+        padding: 0;
+    }
+
     .banner{
         /* height: auto;
         margin-top: 0; */
@@ -648,4 +655,61 @@ nav {
     .bfield_4th{
         width: 90%;
     }
+
+    /* main part */
+    .sec_1{
+        flex-direction: column;
+        gap: 5px;
+    }
+    .sec_1_p1 h2{
+        font-size: 30px;
+    }
+/* section part2 */
+    .sec_2 h2{
+        margin-bottom: 0;
+        font-size: 30px;
+    }
+    .sec_2_ipart img {
+        width: 100%;
+    }
+    .sec_2_ipart2 img {
+        width: 100%;
+    }
+    .sec_2_ipart3 img {
+        width: 100%;
+    }
+
+/* section part3 */
+    .sec_3_p2 {
+        flex-direction: column;
+    }
+    .sec_3_p3 {
+        margin-top: 10px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+/* section last part */
+    .sec_last {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        width: 100%;
+        height: 100%;
+    }
+    .sec_last_p1 {
+        width: 100%;
+        height: 400px;
+    }
+    .sec_last_p2 {
+        width: 100%;
+        height: 350px;
+    }
+
+/* footer part */
+    .foot {
+        padding: 0;
+    }
 }
+
